<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/menu_home"
        android:title="我的"
        android:checked="true"
        />
    </group>

    <item android:title="@string/menu_option">
        <menu>
            <item
                android:id="@+id/menu_user"
                android:title="@string/menu_user"
                android:icon="@drawable/menu_user"/>

            <item
                android:id="@+id/menu_feedback"
                android:title="@string/menu_feedback"
                android:icon="@drawable/menu_feedback"/>

            <item
                android:id="@+id/menu_phone"
                android:title="@string/menu_phone"
                android:icon="@drawable/menu_phone"/>

            <item
                android:id="@+id/menu_about"
                android:title="@string/menu_about"
                android:icon="@drawable/menu_about"/>
        </menu>

    </item>
</menu>